--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,15 @@
   
   <repositories>
   </repositories>
+
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
   
   <build>
     <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
