--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,8 @@ jobs:
       - name: Set up JDK 16
         uses: actions/setup-java@v3
         with:
-          java-version: 16
+          java-version: '16'
+          distribution: 'adopt'
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
       - name: Upload coverage to Codecov
