--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
       <artifactId>jcommander</artifactId>
       <version>1.82</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.1</version>
+    </dependency>
   </dependencies>
   
   <build>
