--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.jerryio.protocol_diagram</groupId>
   <artifactId>ProtocolDiagram</artifactId>
   
-  <version>0.1.0</version>
+  <version>0.2.0</version>
   <name>Protocol Diagram</name>
   <inceptionYear>2022</inceptionYear>
   <packaging>jar</packaging>
@@ -44,6 +44,11 @@
       <groupId>com.beust</groupId>
       <artifactId>jcommander</artifactId>
       <version>1.82</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.1</version>
     </dependency>
   </dependencies>
   
